livnat changes search book

--- a/iBookProject/.classpath
+++ b/iBookProject/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="pics"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Doron/Desktop/29.10.16/סמסטר 9/מעבדה/NEW/sofwares/installations/eclipse/64b/mysql-connector-java-3.1.11-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/em_8_/OneDrive/הנדסת תוכנה/שנה 4/סמסטר א/מעבדה בהנדסת תכנה/Ours/G1_Assignment3/mysql-connector-java-3.1.11-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
